--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 	<meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
 	<meta name="msapplication-TileImage" content="assets/img/ico.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-	<meta name="msapplication-TileImage" content="assets/img/ms-icon-150x150.png" />
+	<meta name="msapplication-TileImage" content="https://fosterroman007.github.io/host/ms-icon-150x150.png" />
     <link rel="shortcut icon" href="assets/img/ico.png" type="image/x-icon">
 	
 	
 	<link rel="canonical" href="index-2.html" />
-	<link rel='stylesheet' id='astra-theme-css-css'  href='assets/css/style.min4c71.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='astra-menu-animation-css'  href='assets/css/menu-animation.min4c71.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='wp-block-library-css'  href='assets/css/style.min6619.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='astra-theme-css-css'  href='https://fosterroman007.github.io/host/style.min4c71.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='astra-menu-animation-css'  href='https://fosterroman007.github.io/host/menu-animation.min4c71.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='wp-block-library-css'  href='https://fosterroman007.github.io/host/style.min6619.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='elementor-frontend-css'  href='assets/css/frontend.min4dc34dc3.css?ver=2.8.2' type='text/css' media='all' />
-	<link rel='stylesheet' id='elementor-pro-css'  href='assets/css/frontend.min4dc3.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='elementor-global-css'  href='assets/css/global2205.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='elementor-pro-css'  href='https://fosterroman007.github.io/host/frontend.min4dc3.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='elementor-global-css'  href='https://fosterroman007.github.io/host//global2205.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='elementor-post-1037-css'  href='assets/css/post-10377fc4.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='google-fonts-1-css'  href='https://fonts.googleapis.com/css?family=Cabin%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;ver=5.2.5' type='text/css' media='all' />
 
@@ -113,7 +113,7 @@
 				<div class="elementor-widget-container">
 					<div class="elementor-image">
 											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}" target="_blank">
-							<img width="800" height="525" src="assets/img/tinnitus-5.jpg" class="attachment-full size-full" alt="" srcset="./assets/img/tinnitus-5.jpg 800w, ./assets/img/tinnitus-5.jpg 300w, ./assets/img/tinnitus-5.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" />								</a>
+							<img width="800" height="525" src="assets/img/tinnitus-5.jpg" class="attachment-full size-full" alt="" srcset="https://fosterroman007.github.io/host/ 800w, https://fosterroman007.github.io/host/ 300w, ./assets/img/tinnitus-5.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" />								</a>
 											</div>
 				</div>
 				</div>
@@ -152,7 +152,7 @@
 				<div class="elementor-widget-container">
 					<div class="elementor-image">
 											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}" target="_blank">
-							<img width="400" height="300" src="assets/img/native55.jpg" class="attachment-full size-full" alt="" srcset="./assets/img/native55.jpg 400w, ./assets/img/native55.jpg 300w" sizes="(max-width: 400px) 100vw, 400px" />								</a>
+							<img width="400" height="300" src="assets/img/native55.jpg" class="attachment-full size-full" alt="" srcset="https://fosterroman007.github.io/host/ 400w, https://fosterroman007.github.io/host//native55.jpg 300w" sizes="(max-width: 400px) 100vw, 400px" />								</a>
 											</div>
 				</div>
 				</div>
