--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 	<title>How To Mute Tinnitus</title>
 	<meta name="description" content="Top Surgeon: &quot;Ears Ringing? Do This Immediately To MUTE Tinnitus...&quot; (Watch)"/>
 	<meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
-	<meta name="msapplication-TileImage" content="assets/img/ico.png" />
+	<meta name="msapplication-TileImage" content="https://fosterroman007.github.io/host/ico.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	<meta name="msapplication-TileImage" content="https://fosterroman007.github.io/host/ms-icon-150x150.png" />
-    <link rel="shortcut icon" href="assets/img/ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://fosterroman007.github.io/host/ico.png" type="image/x-icon">
 	
 	
 	<link rel="canonical" href="index-2.html" />
 	<link rel='stylesheet' id='astra-theme-css-css'  href='https://fosterroman007.github.io/host/style.min4c71.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='astra-menu-animation-css'  href='https://fosterroman007.github.io/host/menu-animation.min4c71.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='wp-block-library-css'  href='https://fosterroman007.github.io/host/style.min6619.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='elementor-frontend-css'  href='assets/css/frontend.min4dc34dc3.css?ver=2.8.2' type='text/css' media='all' />
+	<link rel='stylesheet' id='elementor-frontend-css'  href='https://fosterroman007.github.io/host/frontend.min4dc34dc3.css?ver=2.8.2' type='text/css' media='all' />
 	<link rel='stylesheet' id='elementor-pro-css'  href='https://fosterroman007.github.io/host/frontend.min4dc3.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='elementor-global-css'  href='https://fosterroman007.github.io/host//global2205.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='elementor-post-1037-css'  href='assets/css/post-10377fc4.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='elementor-global-css'  href='https://fosterroman007.github.io/host/global2205.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='elementor-post-1037-css'  href='https://fosterroman007.github.io/host/post-10377fc4.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='google-fonts-1-css'  href='https://fonts.googleapis.com/css?family=Cabin%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;ver=5.2.5' type='text/css' media='all' />
 
 	<script src="8def422529.js" crossorigin="anonymous"></script>
@@ -56,7 +56,7 @@
 				<div class="elementor-widget-container">
 					<div class="elementor-author-box">
 							<div  class="elementor-author-box__avatar">
-					<img src="assets/img/3c74d4a9e0d1665351f749d5bda254778cb8c2b39d3af9f7feb426b0cb3f9f8c.png" alt="Neuroscience Center - News​">
+					<img src="https://fosterroman007.github.io/host/3c74d4a9e0d1665351f749d5bda254778cb8c2b39d3af9f7feb426b0cb3f9f8c.png" alt="Neuroscience Center - News​">
 				</div>
 			
 			<div class="elementor-author-box__text">
@@ -112,8 +112,8 @@
 				<div class="elementor-element elementor-element-4cec02c offlink elementor-widget elementor-widget-image" data-id="4cec02c" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-image">
-											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}" target="_blank">
-							<img width="800" height="525" src="assets/img/tinnitus-5.jpg" class="attachment-full size-full" alt="" srcset="https://fosterroman007.github.io/host/ 800w, https://fosterroman007.github.io/host/ 300w, ./assets/img/tinnitus-5.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" />								</a>
+											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid=crd" target="_blank">
+							<img width="800" height="525" src="https://fosterroman007.github.io/host/tinnitus-5.jpg" class="attachment-full size-full" alt="" srcset="https://fosterroman007.github.io/host/tinnitus-5.jpg 800w, https://fosterroman007.github.io/host/tinnitus-5.jpg 300w, https://fosterroman007.github.io/host/tinnitus-5.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" />								</a>
 											</div>
 				</div>
 				</div>
@@ -125,7 +125,7 @@
 				<div class="elementor-element elementor-element-ab8354f offlink elementor-widget elementor-widget-sina_dynamic_button" data-id="ab8354f" data-element_type="widget" data-widget_type="sina_dynamic_button.default">
 				<div class="elementor-widget-container">
 					<div class="sina-dynamic-button">
-			<a  class="sina-dynamic-btn  " href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}"
+			<a  class="sina-dynamic-btn  " href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid=crd"
 													target="_blank" 
 								>
 							Click Here To Watch The Video					</a>
@@ -151,14 +151,14 @@
 				<div class="elementor-element elementor-element-02399ef offlink elementor-widget elementor-widget-image" data-id="02399ef" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-image">
-											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}" target="_blank">
-							<img width="400" height="300" src="assets/img/native55.jpg" class="attachment-full size-full" alt="" srcset="https://fosterroman007.github.io/host/ 400w, https://fosterroman007.github.io/host//native55.jpg 300w" sizes="(max-width: 400px) 100vw, 400px" />								</a>
+											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid=crd" target="_blank">
+							<img width="400" height="300" src="https://fosterroman007.github.io/host/native55.jpg" class="attachment-full size-full" alt="" srcset="https://fosterroman007.github.io/host/native55.jpg 400w, https://fosterroman007.github.io/host/native55.jpg 300w" sizes="(max-width: 400px) 100vw, 400px" />								</a>
 											</div>
 				</div>
 				</div>
 				<div class="elementor-element elementor-element-3b0f727 offlink elementor-widget elementor-widget-text-editor" data-id="3b0f727" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><h4><a href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}" target="_blank" rel="noopener"><strong><span style="color: #0000ff;">Simple Methods Ends Tinnitus (<span style="text-decoration: underline;">From The ROOT Cause&#8230;</span>)</span></strong></a></h4></div>
+					<div class="elementor-text-editor elementor-clearfix"><h4><a href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid=crd" target="_blank" rel="noopener"><strong><span style="color: #0000ff;">Simple Methods Ends Tinnitus (<span style="text-decoration: underline;">From The ROOT Cause&#8230;</span>)</span></strong></a></h4></div>
 				</div>
 				</div>
 						</div>
@@ -170,14 +170,14 @@
 				<div class="elementor-element elementor-element-5dc688d offlink elementor-widget elementor-widget-image" data-id="5dc688d" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-image">
-											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}" target="_blank">
-							<img width="400" height="300" src="assets/img/native44.jpg" class="attachment-full size-full" alt="" srcset="./assets/img/native44.jpg 400w, ./assets/img/native44.jpg 300w" sizes="(max-width: 400px) 100vw, 400px" />								</a>
+											<a data-elementor-open-lightbox="" href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid=crd" target="_blank">
+							<img width="400" height="300" src="https://fosterroman007.github.io/host/native44.jpg" class="attachment-full size-full" alt="" srcset="https://fosterroman007.github.io/host/native44.jpg 400w, https://fosterroman007.github.io/host/native44.jpg 300w" sizes="(max-width: 400px) 100vw, 400px" />								</a>
 											</div>
 				</div>
 				</div>
 				<div class="elementor-element elementor-element-392ddc4 offlink elementor-widget elementor-widget-text-editor" data-id="392ddc4" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><h4><a href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid={subid}" target="_blank" rel="noopener"><span style="color: #0000ff;"><strong>Neuroscientists Are Stunned: </strong></span><em><span style="color: #0000ff;"><strong>“<span style="text-decoration: underline;">It&#8217;s Like a Mute Button For Your Ears&#8230;</span>”</strong></span></em></a></h4></div>
+					<div class="elementor-text-editor elementor-clearfix"><h4><a href="https://91965anblq4v5u4341v11kpy0v.hop.clickbank.net/?cbpage=live_vsl&tid=crd" target="_blank" rel="noopener"><span style="color: #0000ff;"><strong>Neuroscientists Are Stunned: </strong></span><em><span style="color: #0000ff;"><strong>“<span style="text-decoration: underline;">It&#8217;s Like a Mute Button For Your Ears&#8230;</span>”</strong></span></em></a></h4></div>
 				</div>
 				</div>
 						</div>
@@ -220,7 +220,7 @@
 						</div>
 			</div>
 		</div>
-		<link rel='stylesheet' id='sina-widgets-css'  href='assets/css/sina-widgets.min005e.css' type='text/css' media='all' />
+		<link rel='stylesheet' id='sina-widgets-css'  href='https://fosterroman007.github.io/host/sina-widgets.min005e.css' type='text/css' media='all' />
 		<style>.dtpcnt{opacity: 0;}</style> <script> (function(b,c,f,l,m,e,n,r,d,g,p,a,h,k){function q(){for(var a=c.querySelectorAll(".dtpcnt"),b=0,d=a.length;b<d;b++)a[b][n]=a[b][n].replace(/(^|\s+)dtpcnt($|\s+)/g,"")}b[d]||(b[d]=function(){(b[d].q=b[d].q||[]).push(arguments)},k=c[l],c[l]=function(){k&&k.apply(this,arguments);if(b[d]&&!b[d].hasOwnProperty("params")&&/loaded|interactive|complete/.test(c.readyState))for(;a=c[m][g++];)/\/?click($|(\/[0-9]+)?$)/.test(a.pathname)&&(a[e]="javascrip"+b.postMessage.toString().slice(4,5)+":"+d+'.l="'+a[e]+ '",void 0')},setTimeout(function(){a=c.createElement("script");h=c.scripts[0];a.defer=1;a.src=p+(-1===p.indexOf("?")?"?":"&")+"lpref="+f(c.referrer)+"&lpurl="+f(location[e])+"&lpt="+f(c.title)+"&t="+(new Date).getTime();a[r]=function(){for(g=0;a=c[m][g++];)/dtpCallback\.l/.test(a[e])&&(a[e]=a[e].match(/dtpCallback\.l="([^"]+)/)[1]);q()};h.parentNode.insertBefore(a,h)},0),setTimeout(q,7E3))})(window,document,encodeURIComponent,"onreadystatechange","links","href","className","onerror","dtpCallback", 0,"https://complate-detregon.icu/d/.js"); </script> <noscript><link href="https://complate-detregon.icu/d/.js?noscript=true" rel="stylesheet"/></noscript>
 	</body>
 </html>
