--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
    <head>
       <meta charset="UTF-8">
-      <title>How To Mute Tinnitus</title>
-      <meta name="description" content="Top Surgeon: &quot;Ears Ringing? Do This Immediately To MUTE Tinnitus...&quot; (Watch)"/>
+      <title>How To Mute Ears Ringing</title>
+      <meta name="description" content="Top Surgeon: &quot;Tinnitus? Do This Immediately To MUTE Ears Ringing...&quot; (Watch)"/>
       <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
       <meta name="msapplication-TileImage" content="https://fosterroman007.github.io/host/ico.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
