--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                                    <div class="elementor-element elementor-element-d23b497 elementor-widget elementor-widget-text-editor" data-id="d23b497" data-element_type="widget" data-widget_type="text-editor.default">
                                                       <div class="elementor-widget-container">
                                                          <div class="elementor-text-editor elementor-clearfix">
-                                                            <p style="text-align: center;"><strong>Top Surgeon</strong>: &#8220;<em><span style="color: #ff0000;">Ears Ringing?</span> Do This Immediately To MUTE Tinnitus&#8230;</em>&#8221; <strong>(Watch)</strong></p>
+                                                            <p style="text-align: center;"><strong>Top Surgeon</strong>: &#8220;<em><span style="color: #ff0000;">Tinnitus?</span> Do This Immediately To MUTE Ears Ringing&#8230;</em>&#8221; <strong>(Watch)</strong></p>
                                                          </div>
                                                       </div>
                                                    </div>
